--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Jquery-adchighlighter by adc-tcarvalho</title>
+    <title>jquery-adcHighlighter by adc-tcarvalho</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Jquery-adchighlighter</h1>
+        <h1>jquery-adcHighlighter</h1>
         <p>Easily highlight terms on an HTML document</p>
 
         <p class="view"><a href="https://github.com/adc-tcarvalho/jquery-adcHighlighter">View the Project on GitHub <small>adc-tcarvalho/jquery-adcHighlighter</small></a></p>
