--- a/index.html
+++ b/index.html
@@ -79,11 +79,12 @@
 <h2>
 <a name="thanks" class="anchor" href="#thanks"><span class="octicon octicon-link"></span></a>Thanks</h2>
 
-<p>This plugin is based by "highlight v4" by <a href="http://johannburkard.de/blog/programming/javascript/highlight-javascript-text-higlighting-jquery-plugin.html">Johann Burkard</a>.</p>
+<p>This plugin is based on "highlight v4" by <a href="http://johannburkard.de/blog/programming/javascript/highlight-javascript-text-higlighting-jquery-plugin.html">Johann Burkard</a>.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/adc-tcarvalho">adc-tcarvalho</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small>.</p>
+        <p>Copyright 2014 <a href="http://www.adclick.pt">Adclick Lda</a></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
