--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <footer>
         <p>This project is maintained by <a href="https://github.com/adc-tcarvalho">adc-tcarvalho</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small>.</p>
-        <p>Copyright 2014 <a href="http://www.adclick.pt">Adclick Lda</a></p>
+        <p><small>Copyright 2014 <a href="http://www.adclick.pt">Adclick Lda</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
